--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,8 @@ ext.versions = [
         rxandroid: '2.0.1',
         dagger : '2.11',
         okhttp : '3.9.1',
-        facebookshimmer: '0.1.0'
+        facebookshimmer: '0.1.0',
+        gson: '2.8.1'
 ]
 
 dependencies {
@@ -37,12 +38,12 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 
     //CUSTOM
-    implementation "com.facebook.shimmer:shimmer:${versions.facebookshimmer}@aar"
     implementation "io.reactivex.rxjava2:rxandroid:${versions.rxandroid}"
     implementation "io.reactivex.rxjava2:rxjava:${versions.rxjava}"
     implementation "com.google.dagger:dagger-android:${versions.dagger}"
     annotationProcessor "com.google.dagger:dagger-android-processor:${versions.dagger}"
     implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"
+    implementation "com.google.code.gson:gson:${versions.gson}"
 
     //TESTING
     testImplementation 'junit:junit:4.12'
