--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 
     //CUSTOM
+    implementation "com.facebook.shimmer:shimmer:${versions.facebookshimmer}@aar"
     implementation "io.reactivex.rxjava2:rxandroid:${versions.rxandroid}"
     implementation "io.reactivex.rxjava2:rxjava:${versions.rxjava}"
     implementation "com.google.dagger:dagger-android:${versions.dagger}"
